@@ -1,3 +1,7 @@
+2006-05-30  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* m4/gettimeofday.m4 (CL_GETTIMEOFDAY): Fix M4 quoting.
+
 2006-05-20  Bruno Haible  <bruno@clisp.org>
 
 	* src/base/random/cl_random_from.cc: Treat FreeBSD, NetBSD like other
